# codeql-kaleidoscope

./: .gitignore  LICENSE  README.md  codeql-extractor.yml
autobuilder/: Cargo.toml
autobuilder/src/: main.rs
extractor/: Cargo.toml
extractor/src/: autobuilder.rs  extractor.rs  generator.rs  main.rs
generator/: Cargo.toml
generator/src/: main.rs
ql/lib/: kaleidoscope.dbscheme  qlpack.yml
ql/lib/codeql/: Locations.qll
ql/lib/codeql/files/: FileSystem.qll
ql/lib/codeql/kaleidoscope/: Ast.qll  Cfg.qll  Dataflow.qll  Resources.qll
ql/lib/codeql/kaleidoscope/ast/internal/: Ast.qll  TreeSitter.qll
ql/lib/codeql/kaleidoscope/controlflow/: BasicBlocks.qll
ql/lib/codeql/kaleidoscope/controlflow/internal/: Cfg.qll  ControlFlowGraphImplSpecific.qll
ql/lib/codeql/kaleidoscope/dataflow/: Ssa.qll
ql/lib/codeql/kaleidoscope/ideContextual/: printAst.qll  printAstGenerated.qll
ql/lib/codeql/language/ideContextual/: printAstGenerated.qll
ql/lib/ide-contextual-queries/: printAst.ql  printCfg.ql
ql/lib/test/consistency/: CfgConsistency.expected  CfgConsistency.ql
ql/lib/test/controlflow/: Cfg.expected  Cfg.ql  source.kd
scripts/: create-extractor-pack.ps1  create-extractor-pack.sh
tools/: autobuild.cmd  autobuild.sh  index-files.cmd  index-files.sh  qltest.cmd  qltest.sh
