[package]
name = "language-extractor"
version = "0.1.0"
authors = ["GitHub"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0"
codeql-extractor = { git = "https://github.com/github/codeql" }
tree-sitter = ">= 0.20, < 0.21"
tree-sitter-language = "1.0"
clap = "3.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
rayon = "1.5.0"
num_cpus = "1.14.0"
regex = "1.7.1"
