[package]
name = "kaleidoscope-generator"
version = "0.1.0"
authors = ["GitHub"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
node-types = { path = "../node-types" }
tracing = "0.1"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tree-sitter-kaleidoscope = { git = "https://github.com/aibaars/tree-sitter-kaleidoscope" }
